[gd_scene load_steps=6 format=3 uid="uid://d4bomvxdfb0da"]

[ext_resource type="Script" path="res://Levels/enemy.gd" id="1_mb2hh"]
[ext_resource type="Texture2D" uid="uid://cps18oac4nbue" path="res://PlaceholderAssets/Enemy.png" id="2_o618t"]
[ext_resource type="AudioStream" uid="uid://bkiqho2k41jpu" path="res://PlaceholderAssets/enemy_death.mp3" id="3_y6e64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ji2dn"]
size = Vector2(82, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc7hs"]
size = Vector2(86, 61)

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(836, 138)
floor_stop_on_slope = false
script = ExtResource("1_mb2hh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_o618t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 9)
shape = SubResource("RectangleShape2D_ji2dn")

[node name="CanBeKilled" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanBeKilled"]
position = Vector2(9, 9.5)
shape = SubResource("RectangleShape2D_qc7hs")

[node name="EnemyDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y6e64")
volume_db = -6.3

[connection signal="body_entered" from="CanBeKilled" to="." method="_on_can_be_killed_body_entered"]
